objects/Contact.object
<CustomObject>
    <fields>
        <fullName>API_AdditionalRaceEthnicity__c</fullName>
        <formula>IF(ISBLANK( hmisAdditional_Race_and_Ethnicity_Detail__c ),&quot;&quot;,hmisAdditional_Race_and_Ethnicity_Detail__c)</formula>
        <label>API_AdditionalRaceEthnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AfghanistanOEF__c</fullName>
        <formula>TRIM( LEFT( TEXT( AfghanistanOEF__c ) , FIND( &quot;:&quot;, TEXT( AfghanistanOEF__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AfghanistanOEF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AmIndAKNative__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;1&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AmIndAKNative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Asian__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;2&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <label>API_Asian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_BlackAfAmerican__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;3&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_BlackAfAmerican</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DOBDataQuality__c</fullName>
        <formula>Text(  DOB_Data_Quality__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DOBDataQuality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DOB__c</fullName>
        <formula>If(NOT(ISBLANK(Birthdate)),

TEXT(YEAR( Birthdate ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(Birthdate)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Birthdate)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DesertStorm__c</fullName>
        <formula>TRIM( LEFT( TEXT( DesertStorm__c ) , FIND( &quot;:&quot;, TEXT( AfghanistanOEF__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DesertStorm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DifferentIdentityText__c</fullName>
        <formula>IF(ISBLANK(  DifferentIdentitytext__c  ),&quot;&quot; ,(DifferentIdentitytext__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DifferentIdentityText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DifferentIdentity__c</fullName>
        <formula>TRIM(LEFT(TEXT( Different_Identity__c ),FIND(&quot;:&quot;, TEXT(Different_Identity__c))-1))</formula>
        <label>API_DifferentIdentity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DischargeStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT(DischargeStatus__c),FIND(&quot;:&quot;, TEXT(DischargeStatus__c))-1))</formula>
        <label>API_DischargeStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FirstName__c</fullName>
        <formula>IF(ISBLANK( Hashed_First_Name__c ),&quot;&quot;,Hashed_First_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GenderIdentity__c</fullName>
        <formula>IF (ISBLANK(TEXT(GenderIdentity)),&quot;&quot;,TEXT(GenderIdentity))</formula>
        <label>API_GenderIdentity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GenderNone__c</fullName>
        <formula>TRIM(LEFT(TEXT( GenderNone__c ),FIND(&quot;:&quot;, TEXT( GenderNone__c))-1))</formula>
        <label>API_GenderNone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HispanicLatinaeo__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;6&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_HispanicLatinaeo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IraqOIF__c</fullName>
        <formula>TRIM( LEFT( TEXT( IraqOIF__c ) , FIND( &quot;:&quot;, TEXT( IraqOIF__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_IraqOIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IraqOND__c</fullName>
        <formula>TRIM( LEFT( TEXT( IraqOND__c ) , FIND( &quot;:&quot;, TEXT( IraqOND__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_IraqOND</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_KoreanWar__c</fullName>
        <formula>TRIM( LEFT( TEXT( KoreanWar__c ) , FIND( &quot;:&quot;, TEXT( KoreanWar__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_KoreanWar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MidEastNAfrican__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;7&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_MidEastNAfrican</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MiddleName__c</fullName>
        <formula>IF(ISBLANK( Hashed_Middle_Name__c ),&quot;&quot;,Hashed_Middle_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_MiddleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MilitaryBranch__c</fullName>
        <formula>TEXT( Military_Branch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_MilitaryBranch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NameDataQuality__c</fullName>
        <formula>TRIM(LEFT(TEXT(hmisName_Data_Quality__c),FIND(&quot;:&quot;, TEXT(hmisName_Data_Quality__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NameDataQuality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NativeHIPacific__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;4&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NativeHIPacific</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherTheater__c</fullName>
        <formula>TRIM( LEFT( TEXT( OtherTheater__c ) , FIND( &quot;:&quot;, TEXT( OtherTheater__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_OtherTheater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_RaceNone__c</fullName>
        <formula>TRIM(LEFT(TEXT( RaceNone__c ),FIND(&quot;:&quot;, TEXT(RaceNone__c))-1))</formula>
        <label>API_RaceNone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SSNDataQuality__c</fullName>
        <formula>TRIM(LEFT(TEXT( hmisSSN_Data_Quality__c ),FIND(&quot;:&quot;, TEXT( hmisSSN_Data_Quality__c))-1))</formula>
        <label>API_SSNDataQuality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VeteranStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT(Veteran_Status__c),FIND(&quot;:&quot;, TEXT(Veteran_Status__c))-1))</formula>
        <label>API_VeteranStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VietnamWar__c</fullName>
        <formula>TRIM( LEFT( TEXT( VietnamWar__c ) , FIND( &quot;:&quot;, TEXT( VietnamWar__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_VietnamWar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_White__c</fullName>
        <formula>IF(INCLUDES(hmisRaceandEthnicity__c,&quot;5&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_White</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_WorldWarII__c</fullName>
        <formula>TRIM( LEFT( TEXT( WorldWarII__c ) , FIND( &quot;:&quot;, TEXT( WorldWarII__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_WorldWarII</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_YearEnteredService__c</fullName>
        <formula>If(NOT(ISBLANK(YearEnteredService__c)),YearEnteredService__c,&quot;&quot;)</formula>
        <label>API_YearEnteredService</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_YearSeperated__c</fullName>
        <formula>If(NOT(ISBLANK( YearSeparated__c )),YearSeparated__c,&quot;&quot;)</formula>
        <label>API_YearSeperated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API__c</fullName>
        <formula>IF(ISBLANK(  NameSuffix__c  ),&quot;&quot;,NameSuffix__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NameSuffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AfghanistanOEF__c</fullName>
        <label>Afghanistan OEF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CulturallySpecific__c</fullName>
        <formula>IF(ISPICKVAL( GenderIdentity ,&quot;2&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CulturallySpecific</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_Data_Quality__c</fullName>
        <label>DOB Data Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Full DOB reported</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Approximate or partial DOB reported</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Client doesn’t know</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DesertStorm__c</fullName>
        <label>Desert Storm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DifferentIdentitytext__c</fullName>
        <label>Different Gender Identity Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Different_Identity__c</fullName>
        <label>Different Identity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DischargeStatus__c</fullName>
        <label>Discharge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisDischargeStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrolled_in_HMIS_Program__c</fullName>
        <label>Enrolled in HMIS Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenderNone__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Gender None</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisRaceGenderNone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HMISHashed_SSN__c</fullName>
        <description>HMIS does not allow dashes. This value supports HMIS encrypted field, max 9 characters, only masked using &quot;x&quot;</description>
        <label>SSN</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Hashed_First_Name__c</fullName>
        <description>HMIS Requires first name to be hashed in all reports. The HMIS Hash Flow will create these values for future reporting.</description>
        <label>Hashed First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hashed_Last_Name_c__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Hashed Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hashed_Middle_Name__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Hashed Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IraqOIF__c</fullName>
        <label>Iraq (Operation Iraqi Freedom)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IraqOND__c</fullName>
        <label>Iraq (Operation New Dawn)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KoreanWar__c</fullName>
        <label>Korean War</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Man__c</fullName>
        <formula>IF(ISPICKVAL( GenderIdentity ,&quot;1&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Man</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Branch__c</fullName>
        <label>Military Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Army</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Air Force</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Navy</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Marines</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Coast Guard</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Space Force</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Client doesn’t know</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NameSuffix__c</fullName>
        <label>Name Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonBinary__c</fullName>
        <formula>IF(ISPICKVAL( GenderIdentity ,&quot;4&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonBinary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTheater__c</fullName>
        <description>Theatre of Operations: Other Peace-keeping Operations or Military Interventions (such as Lebanon, Panama, Somalia, Bosnia, Kosovo)</description>
        <inlineHelpText>Theatre of Operations: Other Peace-keeping Operations or Military Interventions (such as Lebanon, Panama, Somalia, Bosnia, Kosovo)</inlineHelpText>
        <label>Other Theater</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questioning__c</fullName>
        <formula>IF(ISPICKVAL( GenderIdentity ,&quot;6&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Questioning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RaceNone__c</fullName>
        <label>Race None</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisRaceGenderNone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Transgender__c</fullName>
        <formula>IF(ISPICKVAL( GenderIdentity ,&quot;5&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transgender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran_Status__c</fullName>
        <inlineHelpText>HMIS end users must be able to edit data to correct errors or reflect changes in client responses or status, or to enter a response for a client who has turned 18.

HMIS end users are not required to ask clients under 18 about veteran status; this does not mean that systems are required to hide or exclude this data element from data entry forms.

HMIS end users may enter “No” for any client under 18. Systems may be
programmed to automatically create a response for clients who turn 18 while
enroll</inlineHelpText>
        <label>Veteran Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VietnamWar__c</fullName>
        <label>Vietnam War</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Woman__c</fullName>
        <formula>IF(ISPICKVAL( GenderIdentity ,&quot;0&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Woman</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorldWarII__c</fullName>
        <label>World War II</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearEnteredService__c</fullName>
        <description>Year value XXXX and must be between 1920 and current year</description>
        <label>Year Entered Military Service</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearSeparated__c</fullName>
        <label>Year Separated</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisAdditional_Race_and_Ethnicity_Detail__c</fullName>
        <inlineHelpText>HMIS limits to 100 characters</inlineHelpText>
        <label>Additional Race and Ethnicity Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hmisName_Data_Quality__c</fullName>
        <label>Name Data Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNameDataQuality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisRaceandEthnicity__c</fullName>
        <label>Race and Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>American Indian, Alaska Native, or Indigenous</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Asian or Asian American</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Black, African American, or African</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Hispanic/Latina/e/o</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Middle Eastern or North African</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Native Hawaiian or Pacific Islander</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>White</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Client doesn’t know</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisSSN_Data_Quality__c</fullName>
        <label>SSN Data Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisSSNDataQuality</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>HMIS_Client</fullName>
        <active>true</active>
        <description>Use for Housing Clients</description>
        <label>HMIS Client</label>
    </recordTypes>
</CustomObject>